Prevented thumbnail sets from having a weird shift left by 20px

--- a/source/design/css/screen/base.less
+++ b/source/design/css/screen/base.less
@@ -51,3 +51,8 @@ input.btn-large,
 input.btn-small {
 	margin-bottom:2px;
 }
+
+/** Fix for .thumbnails' weird alignment **/
+.thumbnails {
+	margin-left:0;
+}
